@startuml

title __SERVICE's Class Diagram__\n

  namespace Service {
    class Service.EChartView {
        {static} - TAG : String
        + EChartView()
        + EChartView()
        + EChartView()
        + refreshEchartsWithOption()
        - init()
    }
  }
  

  namespace Service {
    class Service.ImageLoader {
        {static} + Imageloade()
        {static} + Imageloadecaijian()
        {static} + Imageloadecircle()
        {static} + Imageloadenoholder()
        {static} + Imageloadenoholder()
        {static} + diskcache()
    }
  }
  

  namespace Service {
    class Service.MyApplication {
        + onCreate()
    }
  }
  

  namespace Service {
    interface Service.MyCallBack {
        {abstract} + onFailure()
        {abstract} + onResponse()
    }
  }
  

  namespace Service {
    class Service.NetClient {
        + client : OkHttpClient
        {static} - TAG : String
        - baseurl : String
        {static} - netClient : NetClient
        + getAsyncRequest()
        {static} + getNetClient()
        + postAsyncRequest()
        - NetClient()
        - initOkHttpClient()
    }
  }
  

  namespace Service {
    class Service.OKhttpleper {
        {static} - TAG : String
        - okHttpClient : OkHttpClient
        + yibuget()
        - tongbuget()
        - tongbupost()
        - yibupost()
    }
  }
  

  Service.EChartView -up-|> android.webkit.WebView
  Service.MyApplication -up-|> android.app.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
